--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@
   --primary: #404040;
   --secondary: #8C8C8C;
   --tertiary: #D9D9D9;
+	--blue: #444EAA;
 
 	--icon-active: #262626;
   --icon-inactive: #858585;
