--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,7 @@
 
   --gradient-root: linear-gradient(to bottom, #F2F2F2, #FFFFFF);
   --gradient-sidebar: linear-gradient(to bottom, #FFFFFF, #FAFAFA);
+  background: var(--gradient-root);
 }
 
 html {
